Replace the hardcoded Java directory in the BAT file with reading the JAVA environment variable
Remove unused properties files
Remove some unused keys from the configuration file

--- a/configuration.ini
+++ b/configuration.ini
@@ -1,6 +1,4 @@
-HOST= 129.222.129.253
+HOST= 127.0.0.1
 URL=jdbc:mysql://localhost:3306/lithium
 DB_USER=root
-DB_PASS=ascent
-JAVA8=false
-SHUTDOWNHOOK=true
+DB_PASS=root
